fix line break on wod render and update README

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,3 +52,7 @@
 .textWodAlert {
   @apply font-body text-wodRed tracking-wide;
 }
+
+.display-linebreak {
+  white-space: pre-wrap;
+}
